feat(hero-alt): positioned elements using a grid, logic for switching tabs and automatic content refreshing, a slider that can be swiped with a mouse or finger movement, click on the line below or automatically refreshed every 3 seconds

--- a/styles/blocks/_top-restaurants.scss
+++ b/styles/blocks/_top-restaurants.scss
@@ -150,10 +150,17 @@
     display: flex;
     justify-content: flex-end;
     color: var(--color-gray-accent);
+    font-size: rem(20);
     @include hover {
       .icon--right-arrow-gray::after {
       background-image: url('../../icons/prem-health/arrow-right-purple.svg');
     }
   }
+  }
+
+  &__header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
   }
 }
