--- a/styles/main.scss
+++ b/styles/main.scss
@@ -24,3 +24,7 @@
 @use 'blocks/get-discount';
 @use 'blocks/soc1als';
 @use 'blocks/footer';
+@use 'blocks/search-panel';
+@use 'blocks/price-filter';
+@use 'blocks/category-card';
+@use 'blocks/hero-alt';
