--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -20,6 +20,7 @@
   --color-dark-blue: #081420;
   --color-blue: #002073;
   --color-light-blue: #5AB5FF;
+  --color-extra-light-blue: #a2d2f9;
   --color-lavender: #6C5FBC;
 
   /* Фиолетовые */
@@ -35,8 +36,10 @@
   --color-el-green: #cafadc;
 
   /* Красные/Розовые */
-  --color-red: #EB3F5E;
+  --color-red: #EB3F5E; 
   --color-light-red: #FF5C5C;
+  --color-extra-light-red: #fcaaaa;
+
   --color-pink: #DB79AD;
   --color-light-pink: #DBD9EE;
   --color-red-pink: #F7C5BA;
@@ -44,12 +47,14 @@
   /* Оранжевые/Желтые */
   --color-orange: #FBAD18;
   --color-light-orange: #FFBB71;
+  --color-extra-light-orange: #f7d1a8;
   --color-yellow: #F6E259;
   --color-light-yellow: #F7EDD0;
 
   /* Коричневые */
   --color-brown: #4C2F1B;
   --color-light-brown: #86522C;
+  --color-extra-light-brown: #af917b;
 
 
   --font-family-inter: 'Inter', sans-serif;
