--- a/styles/blocks/_top-dishes.scss
+++ b/styles/blocks/_top-dishes.scss
@@ -30,6 +30,7 @@
     display: flex;
     justify-content: flex-end;
     color: var(--color-gray-accent);
+    font-size: rem(20);
     @include hover {
       .icon--right-arrow-gray::after {
       background-image: url('../../icons/prem-health/arrow-right-purple.svg');
