feat: reusing code from top-dishes section

--- a/styles/blocks/_purchases.scss
+++ b/styles/blocks/_purchases.scss
@@ -83,7 +83,7 @@
     border-radius: rem(25);
     width: 50%;
     height: fit-content;
-    box-shadow: rem(4) rem(51) rem(25) 0 rgba(229, 229, 229, 0.7);
+    box-shadow: rem(4) rem(51) rem(25) 0 rgb(212 208 208 / 70%);
     @include tablet {
       padding: rem(23) rem(23) rem(28);
     }
