--- a/styles/blocks/_top-restaurants.scss
+++ b/styles/blocks/_top-restaurants.scss
@@ -27,7 +27,7 @@
   }
 
   &__item {
-    box-shadow: 6px 71px 36px 0 rgba(229, 229, 229, 0.7);
+    box-shadow: 6px 71px 36px 0 rgb(212 208 208 / 70%);
     background: var(--color-white);
     border-radius: rem(30);
   }
