--- a/styles/main.scss
+++ b/styles/main.scss
@@ -28,3 +28,6 @@
 @use 'blocks/price-filter';
 @use 'blocks/category-card';
 @use 'blocks/hero-alt';
+@use 'blocks/accordion';
+@use 'blocks/accordion-group';
+@use 'blocks/faq';
